--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,27 @@
+/*
+  style.css
+  -----------
+  Main stylesheet for the IP Assignment web application.
+    - Uses CSS variables for easy theming.
+    - Includes animations, responsive containers, and clear sectioning for maintainability.
+
+  Structure:
+    1. Variables
+    2. Base Styles
+    3. Buttons
+    4. Profile
+    5. Forms
+    6. Navigation Bar
+    7. Posts
+    8. Messaging
+    9. Add Post
+   10. Notifications
+   11. Friends
+   12. Feedback
+   13. Utility & Misc
+*/
+
+/* ----- Variables ----- */
 /* Importing the google fonts we will be using */
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Titan+One&display=swap");
@@ -45,6 +69,7 @@
   --bottombar-h: 20px;
 }
 
+/* ----- Base Styles ----- */
 /* Ensuring we have our fonts setup correctly */
 * {
   font-family: "Rubik", sans-serif;
@@ -101,6 +126,7 @@ p {
   margin-bottom: 85px;
 }
 
+/* ----- Buttons ----- */
 /* Buttons */
 .button-Profile,
 .button-Profile-friend {
@@ -193,6 +219,7 @@ p {
   /* margin-top: 90px; */
 }
 
+/* ----- Profile ----- */
 /* Profile View */
 .window-Profile {
   scroll-margin-top: 40vh;
@@ -257,13 +284,14 @@ p {
 }
 
 .settings-button {
-  margin-top: 8px;
+  /* margin-top: 8px; */
+  margin: 0px;
   padding: 4px 3.5px 0px 3.5px;
   border-radius: 50%;
   width: 33px;
   background-color: var(--lightBlue);
   border-style: none;
-  /* margin-right: 1px; */
+  margin-left: 13px;
   margin-bottom: 2px;
 }
 
@@ -329,8 +357,10 @@ p {
 .buttons-Profile {
   display: flex;
   justify-content: end;
+  align-items: center;
 }
 
+/* ----- Forms ----- */
 /* Forms */
 .window-Form {
   max-width: 300px;
@@ -469,6 +499,7 @@ p {
   color: var(--accentPinkDark);
 }
 
+/* ----- Navigation Bar ----- */
 /* Navigation Bar */
 
 .notifications-holder {
@@ -692,6 +723,7 @@ p {
   color: rgb(66, 191, 221);
 }
 
+/* ----- Posts ----- */
 /* Posts Old Design */
 .holder-Post {
   max-width: 300px;
@@ -707,8 +739,6 @@ p {
   border-color: var(--lightBlue);
   box-shadow: var(--windowBoxShadow);
 }
-
-/* !Images on Profile for Post History */
 
 .noPosts-Text {
   font-family: var(--logoFont);
@@ -819,6 +849,7 @@ p {
   transition: var(--transtionTime);
 }
 
+/* Fade-in animation for posts (opacity/transform for entrance effect) */
 .post {
   opacity: 0;
   transform: translateY(15px);
@@ -867,6 +898,7 @@ p {
 
 /*  From here is for Messaging */
 
+/* ----- Messaging ----- */
 .sendNewMessage-Top {
   text-align: center;
   /* margin-left: 20px; */
@@ -990,6 +1022,7 @@ p {
   width: auto;
 }
 
+/* ----- Add Post ----- */
 /* Add a Post Window */
 
 .window-AddPost {
@@ -1120,6 +1153,7 @@ p {
   border-radius: 50%;
 }
 
+/* ----- Feedback ----- */
 .positive-feedback-message-holder {
   text-align: center;
   width: 300px;
@@ -1160,6 +1194,7 @@ p {
   display: inline;
 }
 
+/* ----- Profile Editing ----- */
 /* Editing the Profile Styling */
 .bio-Profile-edit {
   background-color: var(--lightWhite);
@@ -1315,6 +1350,7 @@ so that we can make it look like a button the user can click with instructions *
   animation: shake 4s infinite;
 }
 
+/* ----- Settings Window ----- */
 /* Settings Window */
 .settings-window {
   width: 450px;
@@ -1560,6 +1596,7 @@ so that we can make it look like a button the user can click with instructions *
   text-align: center;
 }
 
+/* ----- Search Results ----- */
 /* Search Results */
 .searchWrapper {
   position: relative;
@@ -1595,6 +1632,7 @@ so that we can make it look like a button the user can click with instructions *
   z-index: 10;
 }
 
+/* Show search results when input is focused */
 .searchWrapper:focus-within .searchResults {
   display: block;
 }
@@ -1671,6 +1709,7 @@ so that we can make it look like a button the user can click with instructions *
   outline: none;
 }
 
+/* ----- Notifications ----- */
 /* Notifications on Messages */
 
 .profile-pic-container {
@@ -1814,4 +1853,61 @@ so that we can make it look like a button the user can click with instructions *
   color: var(--accentPink);
   font-size: var(--fontText);
   margin-bottom: 50px;
+}
+
+/* ----- Friends ----- */
+/* Friends */
+.friends-Holder {
+  display: flex;
+  flex-direction: column;
+  color: var(--accentPink);
+  text-align: center;
+  /* margin-left: 15px; */
+}
+
+.friendsIcon {
+  margin: 0px;
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+}
+
+.friends-text {
+  font-size: var(--fontSmall);
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.friends-counter {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-weight: bold;
+  font-size: large;
+  color: var(--accentPink);
+}
+
+/* ----- Utility & Misc ----- */
+/* User Message Feedback */
+/* "disapearingMessage" is fixed for feedback at top center, above main content */
+.disapearingMessage {
+  position: fixed; 
+  top: 90px;         
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 9999;     
+  transition: opacity 0.5s ease; 
+}
+
+.normal-feedback-message-holder {
+  text-align: center;
+  width: 300px;
+  padding: 20px;
+  color: var(--lightBlue);
+  border-color: var(--neonBlue);
+  color: var(--lightBlue);
+  background-color: rgb(207, 246, 222);
+  border-style: solid;
+  border-width: 2px;
+  border-radius: var(--buttonBorderRadius);
+  margin-bottom: 20px;
 }
